--- a/RecoveryBlocks/TestProgram/RecoveryBlocks.csproj
+++ b/RecoveryBlocks/TestProgram/RecoveryBlocks.csproj
@@ -47,10 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Checkpoint.cs" />
+    <Compile Include="Sort.cs" />
     <Compile Include="RecoveryBlock.cs" />
     <Compile Include="PrimeSearcher.cs" />
     <Compile Include="Start.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Test.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
